--- a/templates/index.html
+++ b/templates/index.html
@@ -255,7 +255,7 @@
 							
 						<div class="destination item">
 							<div class="destination_image">
-								<img src="{%static 'images/destination_1.jpg'%}" alt="">
+								<img src=" {{destin.img.url}} " alt="">
 								<div class="spec_offer text-center"><a href="#">Special Offer</a></div>
 							</div>
 							<div class="destination_content">
