--- a/templates/user_login.html
+++ b/templates/user_login.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         
-        <form action="register" method = "post" >
+        <form action="register" method = "POST" >
 
             {%csrf_token%}
             Name : <input type= "text"  name = "name" >
