--- a/templates/result.html
+++ b/templates/result.html
@@ -18,10 +18,10 @@
         
         
         {%block content%}
-            Result.... {{result}}
+            Result.... {{result}}...
 
         {%endblock%}
         
         <script src="" async defer></script>
     </body>
-</html>
+</html
