--- a/templates/calc.html
+++ b/templates/calc.html
@@ -30,6 +30,7 @@
         Enter first number : <input type= "text", name= "num1"> <br>
         Enter second number : <input type="text", name= "num2">
         <input type="submit">
+        <h1>nothing</h1>
        
         </form>
 
